<resources>
    <string name="app_name">Calculator</string>

    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_point">.</string>

    <string name="button_division_operator">/</string>
    <string name="button_multiplication_operator">*</string>
    <string name="button_add_operator">+</string>
    <string name="button_subtract_operator">-</string>
    <string name="button_modulus_operator">%</string>
    <string name="button_clean">CLEAR</string>
    <string name="button_equal">=</string>

    <string name="main_text_view">Make Your Calculations</string>
</resources>
