<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/colorTableBackground"
    tools:context=".MainActivity">
    <Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:title="Calculator"
        android:titleTextColor="@color/colorWhite"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/main_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center|bottom"
            android:text="@string/main_text_view"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginBottom="7dp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edit_text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right|center"
            android:maxLines="2"
            android:maxLength="17"
            android:paddingRight="15dp"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:stretchColumns="*"
            android:padding="3dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="4">

                <Button
                    android:id="@+id/button_seven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_seven"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_eight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_eight"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber" />

                <Button
                    android:id="@+id/button_nine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_nine"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_subtract_operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_subtract_operator"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickOperator"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_four"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber" />

                <Button
                    android:id="@+id/button_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_five"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber" />

                <Button
                    android:id="@+id/button_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_six"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber" />

                <Button
                    android:id="@+id/button_add_operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_add_operator"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickOperator"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_one"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber" />

                <Button
                    android:id="@+id/button_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_two"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_three"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_multiplication_operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_multiplication_operator"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickOperator"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_zero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_zero"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_point"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickNumber"/>

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_equal"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickEqual"/>

                <Button
                    android:id="@+id/button_division_operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_division_operator"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickOperator" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="4"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_clean"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/colorTableButtons"
                    android:paddingLeft="23dp"
                    android:text="@string/button_clean"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:onClick="onClickClear" />

                <Button
                    android:id="@+id/button_modulus_operator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTableButtons"
                    android:text="@string/button_modulus_operator"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="onClickOperator" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>